Upgrade to 7.0.0