@@ -1,7 +1,7 @@
 /*
  * Axelor Business Solutions
  *
- * Copyright (C) 2020 Axelor (<http://axelor.com>).
+ * Copyright (C) 2021 Axelor (<http://axelor.com>).
  *
  * This program is free software: you can redistribute it and/or  modify
  * it under the terms of the GNU Affero General Public License, version 3,
@@ -41,11 +41,11 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
-import javax.enterprise.context.RequestScoped;
+import javax.enterprise.context.ApplicationScoped;
 import javax.inject.Inject;
 import javax.transaction.Transactional;
 
-@RequestScoped
+@ApplicationScoped
 public class ObjectDataAnonymizeServiceImpl implements ObjectDataAnonymizeService {
 
   @Inject private MailMessageRepository mailMessageRepo;
@@ -186,7 +186,7 @@ public class ObjectDataAnonymizeServiceImpl implements ObjectDataAnonymizeServic
           }
         case "Integer":
           {
-            defaultValues.put(name, new Integer(0));
+            defaultValues.put(name, Integer.valueOf(0));
             break;
           }
         case "Boolean":
@@ -196,7 +196,7 @@ public class ObjectDataAnonymizeServiceImpl implements ObjectDataAnonymizeServic
           }
         case "Long":
           {
-            defaultValues.put(name, new Long(0));
+            defaultValues.put(name, Long.valueOf(0));
             break;
           }
         case "LocalTime":
