@@ -1,7 +1,7 @@
 /*
  * Axelor Business Solutions
  *
- * Copyright (C) 2020 Axelor (<http://axelor.com>).
+ * Copyright (C) 2021 Axelor (<http://axelor.com>).
  *
  * This program is free software: you can redistribute it and/or  modify
  * it under the terms of the GNU Affero General Public License, version 3,
@@ -255,7 +255,7 @@ public class EventController {
 
   @Transactional
   public void deleteThis(ActionRequest request, ActionResponse response) {
-    Long eventId = new Long(request.getContext().getParent().get("id").toString());
+    Long eventId = Long.valueOf(request.getContext().getParent().get("id").toString());
     EventRepository eventRepository = Beans.get(EventRepository.class);
     Event event = eventRepository.find(eventId);
     Event child =
@@ -270,7 +270,7 @@ public class EventController {
 
   @Transactional
   public void deleteNext(ActionRequest request, ActionResponse response) {
-    Long eventId = new Long(request.getContext().getParent().get("id").toString());
+    Long eventId = Long.valueOf(request.getContext().getParent().get("id").toString());
     EventRepository eventRepository = Beans.get(EventRepository.class);
     Event event = eventRepository.find(eventId);
     Event child =
@@ -287,7 +287,7 @@ public class EventController {
 
   @Transactional
   public void deleteAll(ActionRequest request, ActionResponse response) {
-    Long eventId = new Long(request.getContext().getParent().get("id").toString());
+    Long eventId = Long.valueOf(request.getContext().getParent().get("id").toString());
     EventRepository eventRepository = Beans.get(EventRepository.class);
     Event event = eventRepository.find(eventId);
     Event child =
@@ -310,7 +310,7 @@ public class EventController {
 
   @Transactional(rollbackOn = {Exception.class})
   public void changeAll(ActionRequest request, ActionResponse response) throws AxelorException {
-    Long eventId = new Long(request.getContext().getParent().get("id").toString());
+    Long eventId = Long.valueOf(request.getContext().getParent().get("id").toString());
     EventRepository eventRepository = Beans.get(EventRepository.class);
     Event event = eventRepository.find(eventId);
 
@@ -470,7 +470,7 @@ public class EventController {
   public void applyChangesToAll(ActionRequest request, ActionResponse response) {
     EventRepository eventRepository = Beans.get(EventRepository.class);
     Event thisEvent =
-        eventRepository.find(new Long(request.getContext().get("_idEvent").toString()));
+        eventRepository.find(Long.valueOf(request.getContext().get("_idEvent").toString()));
     Event event = eventRepository.find(thisEvent.getId());
 
     Beans.get(EventService.class).applyChangesToAll(event);
