@@ -1,7 +1,7 @@
 /*
  * Axelor Business Solutions
  *
- * Copyright (C) 2020 Axelor (<http://axelor.com>).
+ * Copyright (C) 2021 Axelor (<http://axelor.com>).
  *
  * This program is free software: you can redistribute it and/or  modify
  * it under the terms of the GNU Affero General Public License, version 3,
@@ -73,7 +73,7 @@ public class LeadController {
 
     if (!leadIds.equals("")) {
       leadIds = leadIds.substring(0, leadIds.length() - 1);
-      lead = Beans.get(LeadRepository.class).find(new Long(lstSelectedleads.get(0)));
+      lead = Beans.get(LeadRepository.class).find(Long.valueOf(lstSelectedleads.get(0)));
     } else if (lead.getId() != null) {
       leadIds = lead.getId().toString();
     }
