@@ -1,7 +1,7 @@
 /*
  * Axelor Business Solutions
  *
- * Copyright (C) 2020 Axelor (<http://axelor.com>).
+ * Copyright (C) 2021 Axelor (<http://axelor.com>).
  *
  * This program is free software: you can redistribute it and/or  modify
  * it under the terms of the GNU Affero General Public License, version 3,
@@ -108,7 +108,7 @@ public class ExtraHoursController {
   public void editExtraHoursSelected(ActionRequest request, ActionResponse response) {
     Map extraHoursMap = (Map) request.getContext().get("extraHoursSelect");
     ExtraHours extraHours =
-        Beans.get(ExtraHoursRepository.class).find(new Long((Integer) extraHoursMap.get("id")));
+        Beans.get(ExtraHoursRepository.class).find(Long.valueOf((Integer) extraHoursMap.get("id")));
     response.setView(
         ActionView.define("Extra hours")
             .model(ExtraHours.class.getName())
