@@ -1,7 +1,7 @@
 /*
  * Axelor Business Solutions
  *
- * Copyright (C) 2020 Axelor (<http://axelor.com>).
+ * Copyright (C) 2021 Axelor (<http://axelor.com>).
  *
  * This program is free software: you can redistribute it and/or  modify
  * it under the terms of the GNU Affero General Public License, version 3,
@@ -140,7 +140,9 @@ public class PurchaseOrderController {
         fileLink = purchaseOrderPrintService.printPurchaseOrders(ids);
         title = I18n.get("Purchase orders");
       } else if (context.get("id") != null) {
-        PurchaseOrder purchaseOrder = request.getContext().asType(PurchaseOrder.class);
+        PurchaseOrder purchaseOrder =
+            Beans.get(PurchaseOrderRepository.class)
+                .find(Long.parseLong(context.get("id").toString()));
         title = purchaseOrderPrintService.getFileName(purchaseOrder);
         fileLink =
             purchaseOrderPrintService.printPurchaseOrder(purchaseOrder, ReportSettings.FORMAT_PDF);
@@ -193,13 +195,13 @@ public class PurchaseOrderController {
         // No confirmation popup, purchase orders are content in a parameter list
         List<Map> purchaseOrderMap = (List<Map>) request.getContext().get("purchaseOrderToMerge");
         for (Map map : purchaseOrderMap) {
-          purchaseOrderIdList.add(new Long((Integer) map.get("id")));
+          purchaseOrderIdList.add(Long.valueOf((Integer) map.get("id")));
         }
       } else {
         // After confirmation popup, purchase order's id are in a string separated by ","
         String purchaseOrderIdListStr = (String) request.getContext().get("purchaseOrderToMerge");
         for (String purchaseOrderId : purchaseOrderIdListStr.split(",")) {
-          purchaseOrderIdList.add(new Long(purchaseOrderId));
+          purchaseOrderIdList.add(Long.valueOf(purchaseOrderId));
         }
         fromPopup = true;
       }
@@ -291,14 +293,15 @@ public class PurchaseOrderController {
           JPA.em()
               .find(
                   PriceList.class,
-                  new Long((Integer) ((Map) request.getContext().get("priceList")).get("id")));
+                  Long.valueOf((Integer) ((Map) request.getContext().get("priceList")).get("id")));
     }
     if (request.getContext().get("contactPartner") != null) {
       commonContactPartner =
           JPA.em()
               .find(
                   Partner.class,
-                  new Long((Integer) ((Map) request.getContext().get("contactPartner")).get("id")));
+                  Long.valueOf(
+                      (Integer) ((Map) request.getContext().get("contactPartner")).get("id")));
     }
 
     if (!fromPopup && (existContactPartnerDiff || existPriceListDiff)) {
